# webtych

./: Cargo.toml  README.md  Trunk.toml  index.html  webtych-1071c158426edbaf.js  webtych-1071c158426edbaf_bg.wasm  webtych-1d54dca227a622b4_bg.wasm  webtych-1d975382d070d6ff_bg.wasm  webtych-2ea9e66f1ea0ca09.js  webtych-2ea9e66f1ea0ca09_bg.wasm  webtych-68543dc03545745a_bg.wasm  webtych-6cb72cfbb8921ea4_bg.wasm  webtych-94f353fc77572768_bg.wasm  webtych-9a4a6effa9dbeaf7_bg.wasm  webtych-a7b33e8d746779bc.js  webtych-e96eb93c0b40b3be.js  webtych-e96eb93c0b40b3be_bg.wasm
.github/workflows/: ci.yml  cleanup-preview.yml  deploy.yml
crates/app/: Cargo.toml  index.html
crates/app/src/: lib.rs  main.rs  renderer.rs
crates/game/: Cargo.toml
crates/game/src/: board.rs  events.rs  lib.rs  physics.rs  scoring.rs  state.rs  trimino.rs
crates/game/tests/: integration_tests.rs
crates/lbm/: Cargo.toml
crates/lbm/examples/: headless.rs  visualizer.rs
crates/lbm/shaders/: lbm_advect_color.wgsl  lbm_boundary.wgsl  lbm_collide.wgsl  lbm_collide_bgk.wgsl  lbm_collide_mrt.wgsl  lbm_collide_trt.wgsl  lbm_extract.wgsl  lbm_inject.wgsl  lbm_stream.wgsl
crates/lbm/src/: config.rs  gpu.rs  grid.rs  lib.rs  simulation.rs  types.rs
docs/: lbm-simulation-steps.md  phase-1-plan.md  project-plan.md
previews/claude-plan-next-changes-sZvAB/: index.html
previews/claude-setup-gha-wgpu-KBXiB/: index.html  webtych-a7b33e8d746779bc_bg.wasm  webtych-b4f3ef2c6b70f80d.js  webtych-b4f3ef2c6b70f80d_bg.wasm  webtych-ce4148481143c88f.js  webtych-ce4148481143c88f_bg.wasm
previews/phase1/: index.html  webtych-942477926caef282_bg.wasm  webtych-9a4a6effa9dbeaf7.js
tests/e2e/: package-lock.json  package.json  playwright.config.ts  smoke.spec.ts
